# Cosmology

./: .gitignore  Makefile  PROJECT_STATUS.md  cosmology.ipynb  cosmology_distance.ipynb  pyproject.toml  validation_report.md
cmbcore/: __init__.py  analytic.py  background.py  constants.py  io.py  massive_nu.py  params.py  perturbations.py  plotstyle.py  recombination.py  spectrum.py
figures/: class_comparison_summary.json  class_tt.csv  manifest.yaml  massive_nu_summary.json  param_study_summary.json  polarization_summary.json  values.json
notebooks/: NB0_intro.ipynb  NB0_setup_and_units.ipynb  NB1_background.ipynb  NB2_recombination.ipynb  NB3_perturbations_single_k.ipynb  NB4_transfer_functions.ipynb  NB5_power_spectrum.ipynb  NB6_parameter_dependence.ipynb  NB7_analytic_vs_numeric.ipynb  NB8_validation_class.ipynb
scripts/: make_class_comparison.py  make_figures.py  make_massive_nu.py  make_notebooks.py  make_param_study.py  make_polarization.py  make_textbook_skeleton.py  make_values.py  make_values_tex.py
specs/: 00_README.md  01_textbook_spec.md  02_notebook_spec.md  03_numerics_spec.md  04_task_plan_and_review.md
tests/: test_background.py  test_perturbations.py  test_recombination.py  test_spectrum.py
textbook/: appA_gr.tex  appB_special.tex  appC_gaussian.tex  appD_peebles.tex  appE_polarization.tex  appF_notebooks.tex  appG_solutions.tex  ch01_introduction.tex  ch02_thermal_history.tex  ch03_recombination.tex  ch04_gauge.tex  ch05_einstein.tex  ch06_boltzmann.tex  ch07_initial.tex  ch08_acoustic.tex  ch09_damping.tex  ch10_los.tex  ch11_cl.tex  (+5 more)
(+2 files in other folders)
